# eth-duties

./: .coveragerc  .gitignore  .releaserc.json  404.html  CONTRIBUTING.md  LICENSE  README.md  development_env.yaml  index.html  mkdocs.yaml  poetry_env.yaml  pyproject.toml  requirements.txt
.github/: release.yaml  release.yml
.github/scripts/: release-checklist.sh
.github/workflows/: ci.yml  docker.yaml  docker.yml  pre-commit.yaml  release.yaml  semantic-release.yaml  semver.yaml  semver.yml  temp-mkdocs.yaml
.pre-commit/: .commitlintrc.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml
charts/eth-duties/: Chart.yaml  values.yaml
config/: logging_config.yaml
configuration/beacon-nodes/: index.html
configuration/general/: index.html
configuration/log-colors/: index.html
configuration/log-time/: index.html
configuration/mode/: index.html
configuration/restful-api/: index.html
configuration/validator-identifiers/: index.html
contribute/: index.html
docker/: Dockerfile  attestation-compose.yaml  cicd-attestation-compose.yaml  cicd-compose.yaml  compose.yaml  dockerfile  lighthouse-validator-compose.yaml  test-keymanager-api-compose.yaml
docs/: contribute.md  index.md  test.md
docs/configuration/: beacon-nodes.md  general.md  log-colors.md  log-time.md  mode.md  restful-api.md  validator-identifiers.md
docs/usage/: binary.md  docker.md
duties/: duties.py  initialize.py  main.py
duties/cli/: arguments.py  cli.py  parse.py  types.py
duties/constants/: endpoints.py  json.py  logging.py  program.py
duties/fetcher/: __init__.py  constants.py  data_types.py  fetch.py  fetcher.py  log.py  logger.py  printer.py
duties/helper/: duty.py  error.py  general.py  help.py  identifier.py  killer.py  terminate.py
duties/protocol/: connection.py  ethereum.py  protocol.py  request.py
duties/rest/: app.py  server.py
search/: search_index.json
test/: add_validators.md  config.toml  ethereum-devnet-small.yaml  ethereum-devnet-tags.env  ethereum-devnet.yaml  ethereum-pectra-devnet-small.yaml  ethereum-pectra-devnet-tags.env  ethereum-pectra-devnet.yaml  index.html  run_tests.py  start-kurtosis-devnet.sh
test/cases/: test_cicd_mode.py  test_cli_validation.py  test_general.py  test_logging_mode.py  test_node_connection.py  test_rest_api.py  test_startup.py
test/data/: 61_validators  curl-test-data  devnet-validators  offline-validator-nodes  online-and-wrong-auth-validator-nodes  online-prysm-validator-node  online-validator-nodes  online-validator-nodes-duplicates  over_5k_validators  some-online-validator-nodes
test/test_helper/: chain.py  config.py  functions.py  general.py
tests/mocks/: mock_arguments.py  mock_requests_responses.py
(+22 files in other folders)
